# RoleRadar

./: .gitignore  =0.7  README.md  pyproject.toml  requirements.txt  run-roleradar.sh  scheduled_ingest.sh  setup_systemd.sh
.codex/: hooks.json
data/: target_companies.example.csv
documentation/: scheduled_ingest.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
plans/: MAIN_PLAN.md
roleradar/: __init__.py
roleradar/analytics/: __init__.py  demand_signals.py  queries.py  role_intelligence.py  salary_trends.py  skill_matcher.py  skill_trends.py  trend_engine.py
roleradar/app/: __init__.py  cli.py  server.py
roleradar/app/static/: index.html  styles.css
roleradar/app/static/assets/: index-20mC3-ls.css  (+30 more)
roleradar/config/: __init__.py  settings.py
roleradar/ingestion/: __init__.py  fetch_jobs.py  normalize_jobs.py
roleradar/sources/: __init__.py  adzuna.py  base.py  careers_gov.py  greenhouse.py  jobstreet.py  lever.py  seed_loader.py  ssg_wsg.py
roleradar/storage/: __init__.py  database.py  models.py  repositories.py
tests/: test_cli.py  test_server.py  test_settings.py
tests/analytics/: test_demand_signals.py  test_role_intelligence.py  test_salary_trends.py  test_skill_matcher.py  test_skill_trends.py  test_trend_engine.py
tests/fixtures/: ssg_wsg_taxonomy_response.json
tests/ingestion/: test_fetch_jobs.py  test_normalize_jobs.py
tests/sources/: test_careers_gov.py  test_jobstreet.py  test_seed_loader.py  test_ssg_wsg.py
tests/storage/: test_database.py  test_repositories.py
